--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "build": "npm install && npx prisma generate"
-  },
+"scripts": {
+  "start": "node index.js", 
+  "postinstall": "prisma migrate deploy",
+  "build": "prisma generate"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
